@@ -9,13 +9,14 @@
 package org.eclipse.set.feature.table.pt1.sskw;
 
 import static org.eclipse.nebula.widgets.nattable.sort.SortDirectionEnum.ASC;
+import static org.eclipse.set.feature.table.pt1.sskw.SskwColumns.Freimeldung_Fma;
 import static org.eclipse.set.utils.table.sorting.ComparatorBuilder.CellComparatorType.MIXED_STRING;
 
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
 import org.eclipse.set.core.services.enumtranslation.EnumTranslationService;
+import org.eclipse.set.core.services.session.SessionService;
 import org.eclipse.set.feature.table.PlanPro2TableTransformationService;
 import org.eclipse.set.feature.table.pt1.AbstractPlanPro2TableModelTransformator;
 import org.eclipse.set.feature.table.pt1.AbstractPlanPro2TableTransformationService;
@@ -47,6 +48,9 @@ public final class SskwTransformationService
 	@Reference
 	private EventAdmin eventAdmin;
 
+	@Reference
+	SessionService sessionService;
+
 	/**
 	 * constructor.
 	 */
@@ -56,7 +60,8 @@ public final class SskwTransformationService
 
 	@Override
 	public AbstractPlanPro2TableModelTransformator createTransformator() {
-		return new SskwTransformator(cols, enumTranslationService, eventAdmin);
+		return new SskwTransformator(cols, enumTranslationService, eventAdmin,
+				sessionService);
 	}
 
 	@Override
@@ -85,7 +90,7 @@ public final class SskwTransformationService
 
 	@Override
 	protected List<String> getTopologicalColumnPosition() {
-		return Collections.emptyList();
+		return List.of(Freimeldung_Fma);
 	}
 
 }
